--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/clinic_booking_db?useSSL=false&serverTimezone=Asia/Tokyo&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1126
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MyBatis Configuration
@@ -26,4 +26,10 @@ spring.security.user.password=admin
 # Logging
 logging.level.com.unknownclinic.appointment=DEBUG
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web=DEBUG
+logging.level.org.springframework.security.authentication=DEBUG
+logging.level.org.springframework.security.web.authentication=DEBUG
+logging.level.org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter=DEBUG
+# ログをファイルに出力する場合（オプション）
+# logging.file.name=logs/app.log
 
